# GPUscout

./: .gitignore  CMakeLists.txt  GPUscout.sh  README.md  measurements.sh
src/: CMakeLists.txt  descriptions.hpp  measurements.sh  merge_analysis_datatype_conversion.cpp  merge_analysis_deadlock_detection.cpp  merge_analysis_global_atomics.cpp  merge_analysis_register_spilling.cpp  merge_analysis_use_restrict.cpp  merge_analysis_use_shared.cpp  merge_analysis_use_texture.cpp  merge_analysis_vectorization.cpp  merge_analysis_warp_divergence.cpp  parser_liveregisters.hpp  parser_metrics.hpp  parser_pcsampling.hpp  parser_ptx_global_atomics.hpp  parser_sass_datatype_conversion.hpp  parser_sass_deadlock_detection.hpp  parser_sass_divergence.hpp  parser_sass_register_spilling.hpp  parser_sass_restrict.hpp  parser_sass_use_shared.hpp  parser_sass_use_texture.hpp  parser_sass_vectorized.hpp  save_to_json.cpp  tmp.py
src/sampling_utilities/: generate_sampling_stalls.sh.in
src/sampling_utilities/sampling_continuous/: Makefile.in  pc_sampling_continuous.cpp
src/sampling_utilities/sampling_utility/: Makefile  Makefile.in
